// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`last Snapshot to edit Post 1`] = `
<div
  className="modal modal-open"
  id="postModal"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-heard modal-post"
    >
      <span
        onClick={[Function]}
      />
      <input
        autoFocus={true}
        defaultValue="Udacity is the best place to learn technology."
        placeholder="Title post"
        type="text"
      />
    </div>
    <div
      className="modal-content modal-post"
    >
      <textarea
        defaultValue="Everyone says so after all."
        placeholder="Body post"
      />
      <div
        className="modal-footer"
      >
        <button
          className="save-button udacity"
          href="/"
          onClick={[Function]}
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`last Snapshot to new Post 1`] = `
<div
  className="modal modal-open"
  id="postModal"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-heard modal-post"
    >
      <span
        onClick={[Function]}
      />
      <input
        autoFocus={true}
        defaultValue={undefined}
        placeholder="Title post"
        type="text"
      />
    </div>
    <div
      className="modal-content modal-post"
    >
      <textarea
        defaultValue={undefined}
        placeholder="Body post"
      />
      <div
        className="modal-footer"
      >
        <select
          onChange={[Function]}
        >
          <option
            value="none"
          >
            Save as?
          </option>
          <option
            value="udacity"
          >
            Udacity
          </option>
          <option
            value="react"
          >
            React
          </option>
          <option
            value="redux"
          >
            Redux
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;
